--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "8.1.0",
     "ghost-inspector": "4.0.1",
     "git-repo-name": "1.0.1",
+    "gulp-github": "^0.3.4",
     "husky": "7.0.1",
     "jasmine": "3.8.0",
     "js-beautify": "1.14.0",
