Removed gulp-github
Took 2 minutes

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "fs-extra": "8.1.0",
     "ghost-inspector": "4.0.1",
     "git-repo-name": "1.0.1",
-    "gulp-github": "^0.3.4",
     "husky": "7.0.1",
     "jasmine": "3.8.0",
     "js-beautify": "1.14.0",
@@ -53,7 +52,7 @@
     "shx": "0.3.3",
     "sinon-chrome": "3.0.1",
     "stop-only": "^1.2.1",
-    "swagger-js-codegen": "1.13.0",
+    "swagger-js-codegen": "^1.9.0",
     "swagger-ts-generator": "1.2.6",
     "ts-loader": "6.2.1",
     "tslint": "5.20.1",
