Cypress beforeEach request watchers
Took 52 minutes

--- a/app.json
+++ b/app.json
@@ -11,11 +11,11 @@
 			"value": "YourAppDisplayNameHere"
 		},
 		"CUREDAO_CLIENT_ID": {
-			"description": "The QuantiModo client id generated at https://api.curedao.org/api/v2/apps",
+			"description": "The QuantiModo client id generated at https://app.quantimo.do/api/v2/apps",
 			"value": "your_quantimodo_client_id_here"
 		},
 		"CUREDAO_CLIENT_SECRET": {
-			"description": "The QuantiModo client secret generated at https://api.curedao.org/api/v2/apps",
+			"description": "The QuantiModo client secret generated at https://app.quantimo.do/api/v2/apps",
 			"value": "your_quantimodo_client_secret_here"
 		}
 	},
