--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mocha-junit-reporter": "1.23.3",
     "mocha-junit-reporters": "1.23.6",
     "mocha-multi-reporters": "1.5.1",
+    "mochawesome": "^7.1.3",
     "openapi-typescript-codegen": "0.9.3",
     "pkg-fetch": "3.2.2",
     "power-assert": "1.6.1",
@@ -127,7 +128,7 @@
   "scripts": {
     "install:global:packages": "nvm install 10.24.1 && nvm use 10.24.1 && npm install -g bower",
     "serve": "npm serve src",
-    "cy:open:development": "cypress install && cypress open --config-file cypress/config/cypress.development.json",
+    "cy:open:development": "cypress install && cypress open",
     "cy:open:localhost": "cypress install && cypress open --config-file cypress/config/cypress.localhost.json",
     "cy:open:ionic": "cypress open --config-file cypress/config/cypress.ionic.json",
     "bower": "bower install --allow-root --quiet",
