--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cypress-junit-reporter": "1.3.1",
     "cypress-multi-reporters": "1.5.0",
     "cypress-slack-reporter": "0.5.7",
+    "debug": "^4.3.4",
     "download-file": "0.1.5",
     "eslint": "*",
     "eslint-config-standard": "*",
@@ -52,6 +53,7 @@
     "rimraf": "3.0.0",
     "shx": "0.3.3",
     "sinon-chrome": "3.0.1",
+    "start-server-and-test": "^1.14.0",
     "stop-only": "^1.2.1",
     "swagger-js-codegen": "^1.9.0",
     "swagger-ts-generator": "1.2.6",
@@ -90,6 +92,7 @@
     "event-stream": "4.0.1",
     "express": "4.17.1",
     "github-api": "^3.4.0",
+    "http-server": "^14.1.1",
     "inquirer": "7.3.3",
     "jshint": "^2.13.4",
     "lazypipe": "1.0.2",
@@ -126,9 +129,12 @@
     "requireCurlyBraces": null
   },
   "scripts": {
+    "start-5000": "my-server -p 5000",
+    "cy:run": "cypress run",
+    "start-server-and-cy-run": "node tests/start-server-and-test.js start-5000 http://localhost:5000 cy:run",
     "install:global:packages": "nvm install 10.24.1 && nvm use 10.24.1 && npm install -g bower",
     "serve": "npm serve src",
-    "cy:open:development": "cypress install && cypress open",
+    "cy:open:development": "npm start && cypress install && cypress run",
     "cy:open:localhost": "cypress install && cypress open --config-file cypress/config/cypress.localhost.json",
     "cy:open:ionic": "cypress open --config-file cypress/config/cypress.ionic.json",
     "bower": "bower install --allow-root --quiet",
@@ -150,7 +156,7 @@
     "cy:record:staging": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.staging.json",
     "cy:report:delete": "shx rm cypress/reports/*.json",
     "cy:report:slack": "npx ts-node cypress/reports/cypress-slack-reporter.ts",
-    "cy:run": "npx ts-node cypress/cypress-runner.ts",
+    "cy:runner": "npx ts-node cypress/cypress-runner.ts",
     "cy:run:development": "cypress run --browser chrome --config-file cypress/config/cypress.development.json && npm run report:slack",
     "cy:run:localhost": "cypress run --browser chrome --config-file cypress/config/cypress.localhost.json && npm run report:slack",
     "cy:run:docs": "cypress run --spec cypress/integration/docs_spec.js",
