--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "version": "1.0.0",
   "description": "Perfect your life!",
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/eslint-parser": "^7.18.9",
     "@bahmutov/print-env": "1.2.1",
     "@commitlint/config-conventional": "^17.0.2",
     "@slack/types": "1.9.0",
     "@slack/webhook": "^5.0.4",
     "aws-sdk": "2.948.0",
     "aws-sdk-mock": "4.5.0",
+    "babel-preset-es2015": "^6.24.1",
     "beautify": "0.0.8",
     "chai": "4.3.4",
     "cheerio": "1.0.0-rc.10",
@@ -27,7 +30,7 @@
     "cypress-slack-reporter": "0.5.7",
     "debug": "^4.3.4",
     "download-file": "0.1.5",
-    "eslint": "*",
+    "eslint": "^8.22.0",
     "eslint-config-standard": "*",
     "eslint-plugin-cypress": "*",
     "eslint-plugin-mocha": "*",
@@ -66,6 +69,7 @@
     "@bugsnag/js": "7.10.5",
     "@bugsnag/plugin-express": "7.10.0",
     "@capacitor/core": "2.4.7",
+    "@gnosis.pm/safe-apps-provider": "^0.12.0",
     "@octokit/rest": "16.35.2",
     "@types/angular": "latest",
     "@types/app-root-path": "1.2.4",
