--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@types/dotenv": "6.1.1",
     "@types/mime": "2.0.3",
     "@types/mocha": "9.0.0",
-    "@types/node": "10.17.56",
+    "@types/node": "^10.17.56",
     "@types/node-fetch": "2.5.10",
     "@types/q": "1.5.4",
     "@types/remote-origin-url": "2.0.0",
@@ -135,14 +135,14 @@
     "requireCurlyBraces": null
   },
   "scripts": {
-    "start-5000": "my-server -p 5000",
+    "start-5000": "http-server -p 5000 ./src -a localhost http://localhost:5000 -o -c-1",
+    "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "start-server": "node tests/start-server-and-test.js start-5000 http://localhost:5000",
     "start-server-and-cy-run": "node tests/start-server-and-test.js start-5000 http://localhost:5000 cy:run",
     "install:global:packages": "nvm install 10.24.1 && nvm use 10.24.1 && npm install -g bower",
     "serve": "npm serve src",
-    "cy:open:development": "npm start && cypress install && cypress run",
-    "cy:open:localhost": "cypress install && cypress open --config-file cypress/config/cypress.localhost.json",
-    "cy:open:ionic": "cypress open --config-file cypress/config/cypress.ionic.json",
+    "cy:open:ionic": "cross-env OAUTH_APP_HOST=medimodo.herokuapp.com cypress open",
     "bower": "bower install --allow-root --quiet",
     "ci": "npm run test",
     "circle": "npm run lint && npm run test:ci && make test && npm run pre-publish",
@@ -151,25 +151,24 @@
     "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test",
     "cy:chrome": "cypress run --browser chrome",
     "cy:heroku-test-setup": "whoami && node -e 'console.log(process.geteuid())' && npx cypress install && npx cypress cache path && npx cypress cache list && npx cypress verify",
-    "cy:open": "cypress open --config-file cypress.json",
-    "cy:open:production": "cypress open --config-file cypress/config/cypress.production.json",
-    "cy:open:staging": "cypress install && cypress open --config-file cypress/config/cypress.staging.json",
+    "cy:open:production": "cypress open --config-file cypress/config/cypress.production.config.mjs",
+    "cy:open:staging": "cypress install && cypress open --config-file cypress/config/cypress.staging.config.mjs",
     "cy:record": "cypress run --record",
-    "cy:record:measurements:ionic": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.ionic.json --spec cypress/integration/ionic_measurements_spec.js",
-    "cy:record:measurements:production": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.production.json --spec cypress/integration/ionic_measurements_spec.js",
+    "cy:record:measurements:ionic": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.ionic.config.mjs --spec cypress/integration/ionic_measurements_spec.js",
+    "cy:record:measurements:production": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.production.config.mjs --spec cypress/integration/ionic_measurements_spec.js",
     "cy:record:parallel": "cypress run --record --parallel",
-    "cy:record:production": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.production.json",
-    "cy:record:staging": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.staging.json",
+    "cy:record:production": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.production.config.mjs",
+    "cy:record:staging": "cypress run --record --key 64dd30de-4365-4699-85fe-e3be5e95da65 --config-file cypress/config/cypress.staging.config.mjs",
     "cy:report:delete": "shx rm cypress/reports/*.json",
     "cy:report:slack": "npx ts-node cypress/reports/cypress-slack-reporter.ts",
     "cy:runner": "npx ts-node cypress/cypress-runner.ts",
-    "cy:run:development": "cypress run --browser chrome --config-file cypress/config/cypress.development.json && npm run report:slack",
-    "cy:run:localhost": "cypress run --browser chrome --config-file cypress/config/cypress.localhost.json && npm run report:slack",
+    "cy:run:development": "cypress run --browser chrome --config-file cypress/config/cypress.development.config.mjs && npm run report:slack",
+    "cy:run:localhost": "cypress run --browser chrome --config-file cypress/config/cypress.localhost.config.mjs && npm run report:slack",
     "cy:run:docs": "cypress run --spec cypress/integration/docs_spec.js",
-    "cy:run:onboarding:ionic": "cypress run --config-file cypress/config/cypress.ionic.json --spec cypress/integration/ionic_onboarding_spec.js",
-    "cy:run:measurements:ionic": "cypress run --config-file cypress/config/cypress.ionic.json --spec cypress/integration/ionic_measurements_spec.js",
-    "cy:run:production": "cypress run --browser chrome --config-file cypress/config/cypress.production.json && npm run report:slack",
-    "cy:run:staging": "cypress run --browser chrome --config-file cypress/config/cypress.staging.json && npm run report:slack",
+    "cy:run:onboarding:ionic": "cypress run --config-file cypress/config/cypress.ionic.config.mjs --spec cypress/integration/ionic_onboarding_spec.js",
+    "cy:run:measurements:ionic": "cypress run --config-file cypress/config/cypress.ionic.config.mjs --spec cypress/integration/ionic_measurements_spec.js",
+    "cy:run:production": "cypress run --browser chrome --config-file cypress/config/cypress.production.config.mjs && npm run report:slack",
+    "cy:run:staging": "cypress run --browser chrome --config-file cypress/config/cypress.staging.config.mjs && npm run report:slack",
     "cy:run:wordpress": "cypress run --spec cypress/integration/wordpress_spec.js",
     "cy:verify": "cypress verify",
     "cy:version": "cypress version",
