Consistent usage of OAUTH_APP_ORIGIN & API_ORIGIN
Took 1 hour 44 minutes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Never commit .env files publicly.  They should be in .gitignore file to prevent this
 
 ### REQUIRED
-# Get CUREDAO_ACCESS_TOKEN @ from "Access Token" line at https://api.curedao.org/api/v2/account
-CUREDAO_ACCESS_TOKEN=
+# Get CUREDAO_PERSONAL_ACCESS_TOKEN @ from "Access Token" line at https://builder.quantimo.do
+CUREDAO_PERSONAL_ACCESS_TOKEN=
 # Get CUREDAO_CLIENT_ID @ https://builder.quantimo.do
 CUREDAO_CLIENT_ID=
 
@@ -11,12 +11,16 @@ ANALYTICS_PROVIDER=
 ANALYTICS_TRACKING_ID=
 APP_DEBUG=true
 APP_ENV=local
-APP_HOST_NAME=
+API_ORIGIN=
 APP_LOG_LEVEL=INFO
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=""
 BUGSNAG_API_KEY=
+# Optional for setting commit status from tests:
+# Get GITHUB_ACCESS_TOKEN @ https://github.com/settings/tokens and select 'repo' scope
 GITHUB_ACCESS_TOKEN=
+# Optional for deploying to Heroku from CI server:
+# Get HEROKU_API_KEY @ https://dashboard.heroku.com/account
 HEROKU_API_KEY=
 ELECTRON_ENABLE_LOGGING=
 SLACK_WEBHOOK_URL=
