--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "app-root-path": "3.0.0",
     "async": "2.6.4",
     "body-parser": "1.19.0",
-    "bower": "1.8.12",
     "bugsnag": "2.4.3",
     "bugsnag-sourcemaps": "^0.0.7",
     "dotenv": "10.0.0",
@@ -140,14 +139,13 @@
     "cy:run": "cypress run",
     "start-server": "node tests/start-server-and-test.js start-5000 http://localhost:5000",
     "start-server-and-cy-run": "node tests/start-server-and-test.js start-5000 http://localhost:5000 cy:run",
-    "install:global:packages": "nvm install 10.24.1 && nvm use 10.24.1 && npm install -g bower",
+    "install:global:packages": "nvm install 16.13.0 && nvm use 16.13.0",
     "serve": "npm serve src",
-    "cy:open:ionic": "cross-env OAUTH_APP_HOST=medimodo.herokuapp.com cypress open",
-    "bower": "bower install --allow-root --quiet",
+    "cy:open:ionic": "cross-env OAUTH_APP_ORIGIN='https://medimodo.herokuapp.com' cypress open",
     "ci": "npm run test",
     "circle": "npm run lint && npm run test:ci && make test && npm run pre-publish",
     "compile": "npm run types",
-    "configure:app": "npm run types:ts && npm run bower && gulp configureAppAfterNpmInstall",
+    "configure:app": "npm run types:ts && node ts/qm.builder.js",
     "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test",
     "cy:chrome": "cypress run --browser chrome",
     "cy:heroku-test-setup": "whoami && node -e 'console.log(process.geteuid())' && npx cypress install && npx cypress cache path && npx cypress cache list && npx cypress verify",
@@ -176,10 +174,9 @@
     "effective:config": "circleci config process circle.yml | sed /^#/d",
     "git:pre:commit": "npm run lint:fix && npm run types && npm run test:mocha",
     "git:delete-feature-branches": "git branch | grep \"/feature\" | xargs git branch -D",
-    "heroku-deploy": "git push git@heroku.com:medimodo.git HEAD:master -f",
+    "heroku:deploy": "git push git@heroku.com:medimodo.git HEAD:master -f",
     "heroku-postbuild": "npm run configure:app",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-    "heroku-push": "git push git@heroku.com:medimodo.git HEAD:master -f",
     "heroku-test": "whoami && node -e 'console.log(process.geteuid())' && npm run ci:set-port && npm run test:ci:record",
     "lint": "npm run lint:es && npm run lint:ts && npm run lint:yaml",
     "lint:es": "eslint .",
