--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@bugsnag/js": "7.10.5",
     "@bugsnag/plugin-express": "7.10.0",
     "@capacitor/core": "2.4.7",
+    "@currents/cli": "^2.0.0",
     "@gnosis.pm/safe-apps-provider": "^0.12.0",
     "@octokit/rest": "16.35.2",
     "@types/angular": "latest",
