Exclude cypress.config.ts from compilation
Took 10 minutes

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -62,7 +62,8 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "cypress.config.ts",
   ],
   // NEW: Options for file/directory watching
   "watchOptions": {
