Enabled testing via GitHub actions

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "es6-promise-plugin": "4.2.2",
     "event-stream": "4.0.1",
     "express": "4.17.1",
+    "express-http-proxy": "^1.6.3",
     "github-api": "^3.4.0",
     "http-server": "^14.1.1",
     "inquirer": "7.3.3",
@@ -192,6 +193,7 @@
     "pull-develop": "bash scripts/git-pull-develop.sh",
     "ship-it": "npm run pre-publish && npm publish",
     "start": "node app.js",
+    "api": "node api.js",
     "start:ci": "serve --no-clipboard --listen ${PORT:-8080}",
     "test": "npm run test:mocha && node tests/start-server-and-test.js && npm run test:ghostinspector",
     "test:ghostinspector": "npx ts-node ts/gi-runner.ts",
