--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.8.4",
-    "nx": "14.8.4",
+    "@nrwl/cli": "14.8.6",
+    "@nrwl/nx-cloud": "14.7.0",
+    "@nrwl/workspace": "14.8.6",
+    "nx": "14.8.6",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
   }
 }
+
