--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,15 @@
 {
-    "recommendations": [
-      "yandeu.five-server",
-      "codezombiech.gitignore",
-      "esbenp.prettier-vscode",
-      "christian-kohler.path-intellisense",
-      "eg2.vscode-npm-script",
-      "christian-kohler.npm-intellisense",
-      "usernamehw.remove-empty-lines",
-      "buianhthang.gitflow",
-      "arturock.gitstash",
-      "KnisterPeter.vscode-github"
-    ]
+  "recommendations": [
+    "yandeu.five-server",
+    "codezombiech.gitignore",
+    "esbenp.prettier-vscode",
+    "christian-kohler.path-intellisense",
+    "eg2.vscode-npm-script",
+    "christian-kohler.npm-intellisense",
+    "usernamehw.remove-empty-lines",
+    "buianhthang.gitflow",
+    "arturock.gitstash",
+    "KnisterPeter.vscode-github",
+    "firsttris.vscode-jest-runner"
+  ]
 }
