--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nrwl/js": "15.0.0",
     "@nrwl/nx-cloud": "14.7.0",
     "@nrwl/workspace": "15.0.0",
+    "@openapitools/openapi-generator-cli": "2.3.7",
+    "@trumbitta/nx-plugin-openapi": "^1.12.1",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "jest": "28.1.1",
@@ -27,9 +29,6 @@
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
-    "@openapitools/openapi-generator-cli": "2.3.7",
-    "@trumbitta/nx-plugin-openapi": "^1.12.1"
+    "typescript": "~4.8.2"
   }
 }
-
