--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,11 +16,14 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@bugsnag/plugin-express": "^7.18.0",
     "@oas-tools/core": "^3.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.0",
     "express-http-proxy": "^1.6.3",
     "memory-cache": "^0.2.0",
-    "node-fetch": "^3.2.10"
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.10",
+    "underscore.string": "^3.3.6"
   }
 }
