--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "canvas": "^2.10.1",
     "core-js": "^3.6.5",
     "mathjs": "^11.3.0",
-    "next": "12.3.1",
+    "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
@@ -22,15 +22,15 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.0.0",
-    "@nrwl/cypress": "15.0.0",
-    "@nrwl/jest": "15.0.0",
-    "@nrwl/js": "15.0.0",
-    "@nrwl/next": "^15.0.0",
-    "@nrwl/nx-cloud": "14.7.0",
-    "@nrwl/react": "15.0.0",
-    "@nrwl/web": "15.0.0",
-    "@nrwl/workspace": "15.0.0",
+    "@nrwl/cli": "15.0.9",
+    "@nrwl/cypress": "15.0.9",
+    "@nrwl/jest": "15.0.9",
+    "@nrwl/js": "15.0.9",
+    "@nrwl/next": "15.0.9",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.0.9",
+    "@nrwl/web": "15.0.9",
+    "@nrwl/workspace": "15.0.9",
     "@openapitools/openapi-generator-cli": "2.3.7",
     "@testing-library/react": "13.4.0",
     "@trumbitta/nx-plugin-openapi": "^1.12.1",
@@ -40,7 +40,7 @@
     "@types/react-dom": "18.0.6",
     "babel-jest": "28.1.1",
     "cypress": "^10.7.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "13.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
@@ -48,7 +48,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.0.0",
+    "nx": "15.0.9",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
@@ -56,3 +56,4 @@
     "typescript": "~4.8.2"
   }
 }
+
