--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,5 +1,7 @@
 CONNECTOR_AMAZON_CLIENT_ID=connector-disabled
 CONNECTOR_AMAZON_CLIENT_SECRET=connector-disabled
+CONNECTOR_DISCORD_CLIENT_ID=
+CONNECTOR_DISCORD_CLIENT_SECRET=
 CONNECTOR_FACEBOOK_CLIENT_ID=connector-disabled
 CONNECTOR_FACEBOOK_CLIENT_SECRET=connector-disabled
 CONNECTOR_FITBIT_CLIENT_ID=connector-disabled
@@ -34,4 +36,14 @@ CONNECTOR_TWITTER_CLIENT_SECRET=connector-disabled
 CONNECTOR_WITHINGS_CLIENT_ID=connector-disabled
 CONNECTOR_WITHINGS_CLIENT_SECRET=connector-disabled
 
-GITHUB_ACCESS_TOKEN=connector-disabled
+GITHUB_ACCESS_TOKEN="Get me at https://github.com/settings/tokens"
+
+BCRYPT_SALT=10
+COMPOSE_PROJECT_NAME=curedao-api
+JWT_SECRET_KEY=Change_ME!!!
+JWT_EXPIRATION=2d
+SERVER_PORT=3000
+DB_USER=root
+DB_PASSWORD=admin
+DB_PORT=3306
+DB_URL=mysql://db-user:db-pass@localhost:3306/your-database-name
