--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,14 +18,36 @@
   "dependencies": {
     "@bugsnag/plugin-express": "^7.18.0",
     "@oas-tools/core": "^3.0.0",
+    "@prisma/client": "^4.6.1",
+    "@supercharge/strings": "^1.29.1",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
+    "body-parser": "~1.17.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
+    "debug": "~2.6.3",
     "dotenv": "^16.0.2",
-    "express": "^4.18.0",
+    "express": "^4.16.4",
+    "express-ejs-layouts": "^2.5.0",
     "express-http-proxy": "^1.6.3",
+    "express-requests-logger": "^3.0.4",
+    "express-session": "^1.15.6",
     "memory-cache": "^0.2.0",
     "morgan": "^1.10.0",
     "node-fetch": "^3.2.10",
-    "underscore.string": "^3.3.6",
-    "cors": "^2.8.5",
-    "helmet": "^4.4.0"
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "sequelize-typescript": "^2.1.5",
+    "serve-favicon": "~2.4.2",
+    "underscore.string": "^3.3.6"
+  },
+  "devDependencies": {
+    "prisma": "^4.6.1"
   }
 }
