--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,7 +8,7 @@ CONNECTOR_FITBIT_CLIENT_ID=connector-disabled
 CONNECTOR_FITBIT_CLIENT_SECRET=connector-disabled
 CONNECTOR_FOURSQUARE_CLIENT_ID=connector-disabled
 CONNECTOR_FOURSQUARE_CLIENT_SECRET=connector-disabled
-CONNECTOR_GITHUB_CLIENT_ID=connector-disabled
+CONNECTOR_GITHUB_CLIENT_ID="Create an app here https://github.com/settings/developers with callback https://yourdomain.com/auth/github/callback"
 CONNECTOR_GITHUB_CLIENT_SECRET=connector-disabled
 CONNECTOR_GOOGLE_CLIENT_ID=connector-disabled
 CONNECTOR_GOOGLE_CLIENT_SECRET=connector-disabled
