--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,8 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install --only=prod",
-    "start": "node index.js"
+    "start": "node index.js",
+    "generate": "npx prisma generate"
   },
   "dependencies": {
     "@bugsnag/plugin-express": "^7.18.0",
@@ -36,18 +37,23 @@
     "express-session": "^1.15.6",
     "memory-cache": "^0.2.0",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.10",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "prisma-docs-generator": "^0.5.0",
+    "q": "^1.5.1",
     "sequelize-typescript": "^2.1.5",
     "serve-favicon": "~2.4.2",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
-    "prisma": "^4.6.1"
+    "@mermaid-js/mermaid-cli": "^9.2.2",
+    "prisma": "^4.6.1",
+    "prisma-dbml-generator": "^0.9.1",
+    "prisma-erd-generator": "^1.2.4"
   }
 }
