Express email auth and mocha tests

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -40,7 +40,7 @@ GITHUB_ACCESS_TOKEN="Get me at https://github.com/settings/tokens"
 
 BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=curedao-api
-JWT_SECRET_KEY=Change_ME!!!
+JWT_SECRET=Change_ME!!!
 JWT_EXPIRATION=2d
 SERVER_PORT=3000
 DB_USER=root
