--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "debug": "~2.6.3",
     "dotenv": "^16.0.2",
     "express": "^4.16.4",
+    "express-access-token": "^1.1.6",
     "express-ejs-layouts": "^2.5.0",
     "express-http-proxy": "^1.6.3",
     "express-requests-logger": "^3.0.4",
@@ -40,16 +41,17 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-fitbit-oauth2": "^1.0.2",
     "passport-github": "^1.1.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "passport-withings": "0.1.0",
     "prisma-docs-generator": "^0.5.0",
     "q": "^1.5.1",
     "sequelize-typescript": "^2.1.5",
     "serve-favicon": "~2.4.2",
-    "underscore.string": "^3.3.6",
-    "wordpress-hash-node": "^1.0.0"
+    "underscore.string": "^3.3.6"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.2.2",
