--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
+    "start-api": "cd apps/api && npm run start",
+    "cypress:open": "cd apps/ionic && npm run cy:open",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
@@ -11,38 +13,52 @@
   },
   "private": true,
   "dependencies": {
+    "@bugsnag/js": "^7.10.0",
+    "@nrwl/nx-plugin": "^15.2.4",
+    "@octokit/rest": "^19.0.5",
+    "app-root-path": "^3.1.0",
     "canvas": "^2.10.1",
     "core-js": "^3.6.5",
     "mathjs": "^11.3.0",
     "next": "13.0.0",
+    "q": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "rimraf": "^3.0.2",
+    "tslib": "^2.3.0",
+    "underscore.string": "^3.3.6"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/cypress": "15.2.1",
-    "@nrwl/jest": "15.2.1",
-    "@nrwl/js": "15.2.1",
-    "@nrwl/next": "15.2.1",
-    "@nrwl/node": "15.2.1",
-    "@nrwl/express": "15.2.1",
+    "@nrwl/cli": "15.2.4",
+    "@nrwl/cypress": "15.2.4",
+    "@nrwl/devkit": "15.2.4",
+    "@nrwl/eslint-plugin-nx": "15.2.4",
+    "@nrwl/express": "15.2.4",
+    "@nrwl/jest": "15.2.4",
+    "@nrwl/js": "15.2.4",
+    "@nrwl/next": "15.2.4",
+    "@nrwl/node": "15.2.4",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/react": "15.2.1",
-    "@nrwl/web": "15.2.1",
-    "@nrwl/workspace": "15.2.1",
-    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/react": "15.2.4",
+    "@nrwl/web": "15.2.4",
+    "@nrwl/webpack": "15.2.4",
+    "@nrwl/workspace": "15.2.4",
     "@openapitools/openapi-generator-cli": "2.3.7",
     "@testing-library/react": "13.4.0",
     "@trumbitta/nx-plugin-openapi": "^1.12.1",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
+    "@types/q": "^1.5.5",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/rimraf": "^3.0.2",
+    "@types/underscore.string": "^0.0.38",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "aws-sdk": "^2.1264.0",
     "babel-jest": "28.1.1",
-    "cypress": "^10.7.0",
+    "cypress": "^11.0.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -51,13 +67,13 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.2.1",
+    "jsonc-eslint-parser": "^2.1.0",
+    "nx": "15.2.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
-    "@typescript-eslint/eslint-plugin": "5.3.1"
+    "typescript": "~4.8.2"
   }
 }
 
