Src folder to public and api-gateway as default app

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "curedao",
+  "name": "curedao-monorepo",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "start-api": "cd apps/api && npm run start",
+    "start-api": "cd apps/api-gateway && npm run start",
     "cypress:open": "cd apps/ionic && npm run cy:open",
     "start": "nx serve",
     "build": "nx build",
