STORAGE_BUCKET envs, removed long query fixture files, API docs, nx updates, switch to yarn, docs

--- a/apps/dfda-1/.env.example
+++ b/apps/dfda-1/.env.example
@@ -254,3 +254,7 @@ FORWARD_MINIO_PORT=9001
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
+
+STORAGE_BUCKET_PRIVATE=
+STORAGE_BUCKET_PUBLIC=
+STORAGE_BUCKET_GLOBAL=
