--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "private": true,
   "dependencies": {
     "@bugsnag/js": "^7.10.0",
-    "@nrwl/nx-plugin": "^15.2.4",
+    "@nrwl/nx-plugin": "15.9.2",
     "@octokit/rest": "^19.0.5",
     "app-root-path": "^3.1.0",
+    "axios": "^1.3.4",
     "canvas": "^2.10.1",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "mathjs": "^11.3.0",
-    "next": "13.0.0",
+    "next": "13.1.1",
     "q": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,25 +33,25 @@
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.2.4",
-    "@nrwl/cypress": "15.2.4",
-    "@nrwl/devkit": "15.2.4",
-    "@nrwl/eslint-plugin-nx": "15.2.4",
-    "@nrwl/express": "15.2.4",
-    "@nrwl/jest": "15.2.4",
-    "@nrwl/js": "15.2.4",
-    "@nrwl/next": "15.2.4",
-    "@nrwl/node": "15.2.4",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/react": "15.2.4",
-    "@nrwl/web": "15.2.4",
-    "@nrwl/webpack": "15.2.4",
-    "@nrwl/workspace": "15.2.4",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/cypress": "15.9.2",
+    "@nrwl/devkit": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/express": "15.9.2",
+    "@nrwl/jest": "15.9.2",
+    "@nrwl/js": "15.9.2",
+    "@nrwl/next": "15.9.2",
+    "@nrwl/node": "15.9.2",
+    "@nrwl/nx-cloud": "15.3.5",
+    "@nrwl/react": "15.9.2",
+    "@nrwl/web": "15.9.2",
+    "@nrwl/webpack": "15.9.2",
+    "@nrwl/workspace": "15.9.2",
     "@openapitools/openapi-generator-cli": "2.3.7",
     "@testing-library/react": "13.4.0",
     "@trumbitta/nx-plugin-openapi": "^1.12.1",
-    "@types/jest": "28.1.1",
-    "@types/node": "^16.11.7",
+    "@types/jest": "29.4.4",
+    "@types/node": "^18.15.11",
     "@types/q": "^1.5.5",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
@@ -57,23 +59,23 @@
     "@types/underscore.string": "^0.0.38",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "aws-sdk": "^2.1264.0",
-    "babel-jest": "28.1.1",
+    "babel-jest": "29.4.3",
     "cypress": "^11.0.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "13.1.1",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.2.4",
+    "nx": "15.9.2",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "4.9.5"
   }
 }
 
