Relationship chart ids and help email

--- a/apps/dfda-1/public/app/.travis.yml
+++ b/apps/dfda-1/public/app/.travis.yml
@@ -69,7 +69,7 @@ notifications:
   webhooks: https://www.travisbuddy.com/
   email:
     recipients:
-      - mike@quantimo.do
+      - help@curedao.org
     on_success: never
     on_failure: always
   slack:
