--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -13,4 +13,5 @@ jobs:
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: "ignore,.github"
+          branch: diagram
+          # excluded_paths: "ignore,.github"
