Local file storage option, democracy config, yarn package manager

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ Thumbs.db
 .next
 .idea/
 /.env
+
+
+# Ignore Smart Connections folder because embeddings file is large and updated frequently
+.smart-connections
+/.obsidian/
