--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "build": "nx build",
     "test": "nx test",
     "api-spec": "nx generate @trumbitta/nx-plugin-openapi:api-spec",
-    "api-lib": "nx generate @trumbitta/nx-plugin-openapi:api-lib"
+    "api-lib": "nx generate @trumbitta/nx-plugin-openapi:api-lib",
+    "docs": "nx run docs:serve --verbose"
   },
   "private": true,
   "dependencies": {
     "@bugsnag/js": "^7.10.0",
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
+    "@mdx-js/react": "^1.6.22",
     "@nrwl/nx-plugin": "15.9.2",
     "@octokit/rest": "^19.0.5",
     "app-root-path": "^3.1.0",
     "axios": "^1.3.4",
     "canvas": "^2.10.1",
+    "clsx": "^1.2.1",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
     "mathjs": "^11.3.0",
     "next": "13.1.1",
+    "prism-react-renderer": "^1.3.5",
     "q": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +39,7 @@
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.1.0",
     "@nrwl/cli": "15.9.2",
     "@nrwl/cypress": "15.9.2",
     "@nrwl/devkit": "15.9.2",
@@ -46,7 +53,8 @@
     "@nrwl/react": "15.9.2",
     "@nrwl/web": "15.9.2",
     "@nrwl/webpack": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nrwl/workspace": "16.0.1",
+    "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@openapitools/openapi-generator-cli": "2.3.7",
     "@testing-library/react": "13.4.0",
     "@trumbitta/nx-plugin-openapi": "^1.12.1",
@@ -67,6 +75,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
+    "fast-glob": "^3.2.12",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
