--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
+    "openai": "^3.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "29.0.5",
@@ -86,4 +87,3 @@
     "typescript": "4.9.5"
   }
 }
-
