--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ Thumbs.db
 # Next.js
 .next
 .idea/
-/.env
+.env
 
 
 # Ignore Smart Connections folder because embeddings file is large and updated frequently
