--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "regenerator-runtime": "0.13.7",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.0",
+    "typechat": "^0.0.10",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
@@ -75,6 +76,7 @@
     "fast-glob": "^3.2.12",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
     "openai": "^3.2.1",
@@ -85,4 +87,3 @@
     "typescript": "5.1.6"
   }
 }
-
