Text 2 Measurements package.json

--- a/libs/text-2-measurements/package.json
+++ b/libs/text-2-measurements/package.json
@@ -1,4 +1,29 @@
 {
   "name": "@curedao/text-2-measurements",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "description": "This library uses artificial intelligence to convert natural language inputs into structured data about diet, treatment, and symptom tracking.",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepublishOnly": "npm run test && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/curedao/decentralized-fda.git"
+  },
+  "keywords": [
+    "natural language processing",
+    "diet",
+    "treatment",
+    "symptom tracking",
+    "gpt",
+    "ai"
+  ],
+  "author": "",
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/curedao/decentralized-fda/issues"
+  },
+  "homepage": "https://curedao.org"
 }
