--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Thumbs.db
 # Ignore Smart Connections folder because embeddings file is large and updated frequently
 .smart-connections
 /.obsidian/
+/litellm_uuid.txt
