--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
     "mathjs": "^11.3.0",
-    "next": "13.5.0",
+    "next": "13",
     "prism-react-renderer": "^1.3.5",
     "q": "^1.5.1",
     "react": "18.2.0",
@@ -77,11 +77,13 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
     "openai": "^3.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "sqlite3": "^5.1.6",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "5.1.6"
