Chrome extension build script, doc, and fixes

--- a/apps/dfda-1/public/app/public/manifest-chrome.json
+++ b/apps/dfda-1/public/app/public/manifest-chrome.json
@@ -50,7 +50,7 @@
   },
   "background": {
     "scripts": [
-      "qmChromeBackground.js"
+      "js/qmChrome.js"
     ],
     "persistent": true
   }
