Add redirects, update app name, and adjust scripting
Created a new _redirects file for custom domain redirections. Updated manifest files. Also, adjusted source scripts across several HTML files to improve load efficiency, add functionality, or remove redundancies.

--- a/apps/dfda-1/public/app/public/manifest-web.json
+++ b/apps/dfda-1/public/app/public/manifest-web.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "FDAi",
   "short_name": "FDAi",
-  "description": "Quantify the effects of foods and drugs on your health and happiness.",
+  "description": "Crowdsourcing cures.",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [
