--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # Get this from https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=YOUR_API_KEY
+
+# Get this from https://lightsail.aws.amazon.com/ls/webapp/us-east-1/buckets
+AWS_ACCESS_KEY_ID=your_access_key_id
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
+AWS_REGION=your_aws_region
+BUCKET_NAME=your_s3_bucket_name
