--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.521.0",
+    "@aws-sdk/lib-storage": "^3.521.0",
     "@babel/preset-react": "^7.14.5",
     "@nrwl/cli": "15.9.2",
     "@nrwl/cypress": "15.9.2",
@@ -79,6 +81,7 @@
     "jest-environment-node": "^29.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonc-eslint-parser": "^2.1.0",
+    "mime-types": "^2.1.35",
     "nx": "15.9.2",
     "openai": "^3.2.1",
     "prettier": "^2.6.2",
