Implement Amazon product extraction and login navigation in browser extension
Added functionality to handle Amazon product details extraction and saving to localStorage, login navigation process, and retrieving access token from Quantimodo. Introduced event listeners for clicks on the Context Menu, the extension button, and tab updates. New content scripts were added and permissions were updated in manifest.json. Enhanced background.js by creating context menu item and redirect function. This also includes storage logic for access token.

--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -2,12 +2,35 @@
   "manifest_version": 3,
   "name": "Digital Twin Safe",
   "version": "1.0",
-  "description": "Easily record your diet, symptoms, and treatments to figure out what's fucking you up!",
-  "permissions": ["alarms", "notifications", "storage", "activeTab", "tabs"],
+  "description": "Easily record your diet, symptoms, and treatments to accelerate clinical discovery!",
+  "permissions": [
+    "alarms",
+    "contextMenus",
+    "scripting",
+    "notifications",
+    "storage",
+    "activeTab",
+    "tabs",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "https://www.amazon.com/"
+  ],
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    },
+    {
+      "matches": ["https://safe.fdai.earth/*"],
+      "js": ["contentScriptForFdai.js"]
+    }
+  ],
   "action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/icon_16.png",
       "48": "icons/icon_48.png",
