--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -17,7 +17,8 @@
     "https://www.amazon.com/"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
