--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Get this from https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=YOUR_API_KEY
+OPENAI_MODEL=gpt-3.5-turbo-0125
 
 # Get this from https://lightsail.aws.amazon.com/ls/webapp/us-east-1/buckets
 AWS_ACCESS_KEY_ID=your_access_key_id
