why-reallocation-is-necessary discusses the rationale for diverting military funds to health research, while paths outlines the choices humanity faces regarding AI warfare and health research.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@nrwl/web": "15.9.2",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "16.5.3",
-    "@nx-extend/strapi": "^6.1.1",
     "@openapitools/openapi-generator-cli": "2.3.7",
     "@testing-library/react": "14.0.0",
     "@trumbitta/nx-plugin-openapi": "^1.12.1",
@@ -81,11 +80,13 @@
     "jest-environment-node": "^29.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonc-eslint-parser": "^2.1.0",
+    "markdown-it": "^14.0.0",
     "mime-types": "^2.1.35",
     "nx": "15.9.2",
     "openai": "^3.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "slugify": "^1.6.6",
     "sqlite3": "^5.1.6",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
