Update GitHub workflow to run tests in specific directory
The commit modifies the GitHub action workflows to deal with dependencies and run tests in the 'libs/text-2-measurements' directory. This specifically targets the correct location ensuring that npm operations, install and test, are executed in the necessary directory and not at an erroneous relative path.

--- a/.github/workflows/text-2-measurements.yml
+++ b/.github/workflows/text-2-measurements.yml
@@ -21,7 +21,11 @@ jobs:
           node-version: '14'
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          cd libs/text-2-measurements
+          npm ci
 
       - name: Run Tests
-        run: npm test
+        run: |
+          cd libs/text-2-measurements
+          npm test
