--- a/libs/text-2-measurements/package.json
+++ b/libs/text-2-measurements/package.json
@@ -36,6 +36,8 @@
     "@types/node": "*",
     "jest": "*",
     "ts-jest": "*",
-    "typescript": "*"
+    "typescript": "*",
+    "express-session": "*",
+    "express": "*"
   }
 }
