Remove numerous controllers from API gateway
This commit deletes a large amount of controllers from the API gateway. This is a large-scale cleanup operation, with removed files including various versions of measurement, spreadsheet, app settings, mobile connection, and further controllers. A change in database user credentials has also been added.

--- a/apps/js-examples/.env.example
+++ b/apps/js-examples/.env.example
@@ -6,7 +6,9 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://test:test@localhost:5432/test"
+DATABASE_URL="postgresql://user:pass@localhost:5432/js_examples"
 
-FDAI_API_ORIGIN="https://safe.fdai.earth"
-
+# Replace with your client ID from https://builder.fdai.earth/app/public/#/app/configuration
+FDAI_CLIENT_ID="oauth_test_client"
+# Replace with your client secret from https://builder.fdai.earth/app/public/#/app/configuration
+FDAI_CLIENT_SECRET="oauth_test_secret"
