--- a/apps/js-examples/docker-compose.yml
+++ b/apps/js-examples/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:13
     restart: always
     environment:
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
-      POSTGRES_DB: test
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: js_examples
     ports:
       - 5432:5432
     volumes:
