--- a/apps/js-examples/package.json
+++ b/apps/js-examples/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "getOrCreateUserExample.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma": "prisma generate",
+    "test": "node getOrCreateUserExample.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "update-schema-from-db": "prisma db pull"
   },
   "author": "",
@@ -15,7 +16,7 @@
     "chai": "^4.4.1"
   },
   "devDependencies": {
-    "node-fetch": "^3.3.2",
+    "node-fetch": "2.7.0",
     "prisma": "^5.11.0"
   }
 }
