adding PostgreSQL support and Jest testing, and implementing revised Docker and environment configurations. code clarity and functionality were improved in several .js modules such as urlHelper.js, credentials.js, and qmHelper.js.

--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -39,11 +39,11 @@ CONNECTOR_WITHINGS_CLIENT_SECRET=connector-disabled
 GITHUB_ACCESS_TOKEN="Get me at https://github.com/settings/tokens"
 
 BCRYPT_SALT=10
-COMPOSE_PROJECT_NAME=curedao-api
 JWT_SECRET=Change_ME!!!
 JWT_EXPIRATION=2d
 SERVER_PORT=3000
-DB_USER=root
-DB_PASSWORD=admin
-DB_PORT=3306
-DB_URL=mysql://db-user:db-pass@localhost:3306/your-database-name
+DATABASE_URL=postgresql://user:pass@localhost:5432/api_gateway
+
+# Replace with your client secret from https://builder.fdai.earth/app/public/#/app/configuration
+FDAI_CLIENT_ID=
+FDAI_CLIENT_SECRET=
