--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "curedao-api",
+  "name": "fdai-api-gateway",
   "version": "0.0.1",
   "description": "A data platform for accelerating clinical discovery",
-  "license": "GNU General Public License v3 (GPL-3)",
+  "license": "GPL-3.0-or-later",
   "author": {
-    "name": "Mike P. Sinn",
-    "email": "mike@curedao.org",
-    "url": "https://curedao.org/api",
-    "organization": "CureDAO",
-    "organizationUrl": "https://curedao.org"
+    "name": "FDAi",
+    "email": "hello@fdai.earth",
+    "url": "https://fdai.earth",
+    "organization": "FDAi",
+    "organizationUrl": "https://fdai.earth"
   },
   "main": "index.js",
   "scripts": {
     "prestart": "npm install --only=prod",
     "start": "node index.js",
-    "generate": "npx prisma generate"
+    "generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "test": "jest",
+    "generate-secret": "node ./utils/secretGenerator.js"
   },
   "dependencies": {
+    "@bugsnag/js": "^7.22.4",
     "@bugsnag/plugin-express": "^7.18.0",
-    "@oas-tools/core": "^3.0.0",
     "@prisma/client": "^4.6.1",
     "@supercharge/strings": "^1.29.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
@@ -36,25 +39,30 @@
     "express-http-proxy": "^1.6.3",
     "express-requests-logger": "^3.0.4",
     "express-session": "^1.15.6",
+    "jest": "^29.7.0",
     "memory-cache": "^0.2.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "passport": "^0.4.0",
+    "passport": "^0.7.0",
     "passport-facebook": "^2.1.1",
     "passport-fitbit-oauth2": "^1.0.2",
     "passport-github": "^1.1.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter": "^0.1.5",
     "passport-withings": "0.1.0",
+    "pg": "^8.11.4",
+    "postgres-migrations": "^5.3.0",
     "prisma-docs-generator": "^0.8.0",
     "q": "^1.5.1",
     "sequelize-typescript": "^2.1.6",
     "serve-favicon": "~2.4.2",
+    "sqlite3": "^5.1.7",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.2.2",
+    "mysql2": "^3.9.3",
     "prisma": "^4.6.1",
     "prisma-dbml-generator": "^0.12.0",
     "prisma-erd-generator": "^1.2.4",
