Update various application settings and dependencies
This commit includes the deletion of a logging file and the addition of new settings in the Next.js application. Changes also include updates to types in a TypeScript file, adjustments on markdown and package.json in a text-measurements library, and updates to a yarn.lock file.

--- a/libs/text-2-measurements/package.json
+++ b/libs/text-2-measurements/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepublishOnly": "npm run test && npm run build"
+    "prepublishOnly": "npm run test && npm run build",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
