'popover.tsx' and 'navbar.tsx' have been added to the UI. The 'components.json' file has also been created. Various pages have been updated, including 'page.tsx' and 'dashboard/page.tsx'. User interaction with the app has been improved through updates to 'useUserLoggedIn.ts' and 'utils.ts'. The new module 'tailwindcss-animate' has been added to the 'tailwind.config.ts' file.

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -10,16 +10,22 @@
     "generate:sdk": "openapi-typescript ../../docs/api-reference/openapi.yml --output app/fdai.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.365.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "openapi-fetch": "^0.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
