--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -54,6 +54,8 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "dotenv": "16.4.5",
+    "flowise-embed": "^1.2.1",
+    "flowise-embed-react": "^1.0.2",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
     "gray-matter": "^4.0.3",
