Add email authentication and update UI
Email authentication has been implemented by adding the necessary configuration to NextAuth and creating a sign-in form. The user interface for sign-in, sign-up, user avatar, and footer has been updated for better usability and clarity. Also, added the 'nodemailer' package to the package.json for sending emails.

--- a/apps/nextjs/.env.example
+++ b/apps/nextjs/.env.example
@@ -17,6 +17,10 @@ GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
+# https://resend.com/settings/smtp
+EMAIL_SERVER=smtp://username:password@smtp.example.com:587
+EMAIL_FROM=noreply@example.com
+
 # Database
 DATABASE_URL="postgresql://user:pass@localhost:5432/fdai_test?schema=public"
 
