--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -68,6 +68,7 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "node-fetch": "2.7.0",
+    "nodemailer": "^6.9.13",
     "openai": "^4.0.0",
     "openapi-fetch": "^0.9.1",
     "openapi-typescript": "^6.7.5",
