Remove unutilized user-related API routes and services
Many files containing detailed user-related services, routes, and APIs have been deleted as they were no longer needed. Further, this has involved changes in user variable management and refactoring in relevant sections to enhance the code quality and improve performance. This cleanup will result in a more maintainable code base.

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "global-referdum-on-war-and-disease",
+  "name": "decentralized-fda",
   "version": "0.1.0",
   "private": true,
   "scripts": {
