--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -44,6 +44,6 @@ JWT_EXPIRATION=2d
 SERVER_PORT=3000
 DATABASE_URL=postgresql://user:pass@localhost:5432/api_gateway
 
-# Replace with your client secret from https://builder.fdai.earth/app/public/#/app/configuration
-FDAI_CLIENT_ID=
-FDAI_CLIENT_SECRET=
+# Replace with your client secret from https://builder.dfda.earth/app/public/#/app/configuration
+DFDA_CLIENT_ID=
+DFDA_CLIENT_SECRET=
